fix(switch-palette-widget): reposition mobile palette switcher container

--- a/src/components/SwatchPaletteWidget/_swatch-palette-widget.scss
+++ b/src/components/SwatchPaletteWidget/_swatch-palette-widget.scss
@@ -49,10 +49,7 @@
     padding: 0 $spacing-05;
     background: $ui-01;
     top: 0;
-
-    @include carbon--breakpoint('md') {
-      padding-top: $spacing-09;
-    }
+    padding-top: $spacing-09;
   }
 }
 
